# astro-engine

./: .gitignore  README.md  debug.sh  game.py  main.py  run.sh  setup.py
astro/: application.py  c_window.pxd  cwindow.pxd  ecs.py  input.py  window.pyx
astro/core/: application.pyx  c_entitymanager.pxd  centity_manager.pxd  cmath.pxd  entity_manager.pyx  entitymanager.pyx  input.pyx  math.pyx  platform.pxd  platform.pyx
astro/cython/: cwindow.pxd  window.pyx
astro/ecs/: entity.pxd  entity.pyx
astro/graphics/: c_graphics.pxd  camera.pxd  camera.py  camera.pyx  render_system.py  renderer.pxd  renderer.pyx  rendersystem.pxd  rendersystem.pyx  shader.pxd  shader.pyx  viewport.py  window.py
astro/graphics/utils/: cameracontrol.pyx
astro/math/: c_math.pxd  matrix.pxd  matrix.pyx  vector.pxd  vector.pyx
astro/native/: __init__.py
astro/utils/: cameracontrol.pyx
shaders/: basic.frag.glsl  basic.vert.glsl  instanced.frag.glsl  instanced.vert.glsl
src/: CMakeLists.txt  main.cpp
src/cmake/: FindSDL2.cmake
src/core/: component.h  entity_manager.cpp  entity_manager.h  entity_manager_py.cpp  entitymanager.cpp  math.h  system.h
src/core/ecs/: component.h  entity.h  entity_manager.cpp  entity_manager.h
src/core/graphics/: gl.h  render_system.cpp  render_system.h
src/core/memory/: allocator.cpp  allocator.h  component_allocator.cpp  component_allocator.h
src/ecs/: entity_manager.cpp  entity_manager.h  entity_manager_py.cpp  system.h
src/graphics/: camera.cpp  camera.h  gl.c  gl.cpp  gl.h  math.h  mesh.cpp  mesh.h  model.cpp  model.h  render_system.cpp  render_system.h  renderer.cpp  renderer.h  rendersystem.cpp  rendersystem.h  shader.cpp  shader.h
src/interface/: render_system.i
src/math/: matrix4.h  vector3.h
src/platform/: window.c  window_py.c
src/swig/: graphics.i
src/window/: window.c  window.h  window_py.c
